deploy/gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adk-runtime
  annotations:
    kubernetes.io/ingress.global-static-ip-name: adk-runtime-ip
    networking.gke.io/managed-certificates: adk-runtime
    kubernetes.io/ingress.allow-http: "false"
spec:
  defaultBackend:
    service:
      name: adk-runtime
      port:
        name: http
